--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -7,7 +7,10 @@
   </div>
   <div class="contents">
     <h3>Elasticsearch plugin for linear regression</h3>
-    <p>A machine learning plugin for Elasticsearch providing aggregations to compute multiple linear regression on search results in real-time for predictive analytics.</p>
+    <p>I'm the creator of a machine learning plugin for Elasticsearch providing aggregations to compute multiple linear regression on search results in real-time for predictive analytics.
+       The implementation is open source and is based on an elaborated parallel, single-pass OLS estimation algorithm for multiple linear regression
+       well-fitting for large-scale, distributed data sets.
+    </p>
     <a class="project-link" href="https://github.com/scaleborn/elasticsearch-linear-regression">Check it out</a>
   </div>
 </div>
@@ -17,7 +20,11 @@
   </div>
   <div class="contents-right">
     <h3>logsniffer</h3>
-    <p>logsniffer is a sophisticated open source web tool for parsing, viewing, monitoring and analyzing log data - smarter, collaborative and easier.</p>
+    <p>Inspired by tools like <code>tail</code>,
+       <code>grep</code> and <code>less</code> I've created logsniffer with the vision to provide
+       the same experience by a smart web tool when working with log files.
+       logsniffer supports viewing all logs instantly in front of a browser, tailing logs in real-time, scrolling and searching through very large files – forward and backward.
+    </p>
     <a class="project-link" href="https://github.com/logsniffer/logsniffer">Check it out</a>
   </div>
 </div>
