--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,6 +12,10 @@
          be evolutionary, allowing to apply changes easier and cheaper.
          With that in mind I love to design systems uppon domain driven design
          principles and to utilize micro services and micro frontends.
+         Combined with agility such architectures empower DevOps teams to develop
+         their sub systems autonomously in polyglot environments and
+         with the technological freedom to
+         use the best tool for their job.
      </p>
     </div>
     <div class="tech">
