--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
          Combined with agility such architectures empower DevOps teams to develop
          their sub systems autonomously in polyglot environments and
          with the technological freedom to
-         use the best tool for their job.
+         use the best tools for their job.
      </p>
     </div>
     <div class="tech">
