--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,7 @@
       <p>In a fast moving world software architecture needs to
          be evolutionary, allowing to apply changes easier and cheaper.
          With that in mind I love to design systems uppon domain driven design
-         principles and to utilize micro services and micro frontends.
+         principles and to utilize micro service and micro frontend approaches.
          Combined with agility such architectures empower DevOps teams to develop
          their sub systems autonomously in polyglot environments and
          with the technological freedom to
