--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,14 +8,15 @@
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-sass-original colored"></i>
-      <p>In a fast moving world software architecture needs to
+      <p>In a fast moving world software architectures need to
          be evolutionary, allowing to apply changes easier and cheaper.
          With that in mind I love to design systems uppon domain driven design
          principles and to utilize micro service and micro frontend approaches.
-         Combined with agility such architectures empower DevOps teams to develop
-         their sub systems autonomously in polyglot environments and
+         Such architectures empower DevOps teams to develop
+         their sub systems autonomously, in polyglot environments and
          with the technological freedom to
-         use the best tools for their job.
+         use the best tools for their job. Combined with agility it's the key
+         for developing better products efficiently.
      </p>
     </div>
     <div class="tech">
