--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,7 @@
          their sub systems autonomously, in polyglot environments and
          with the technological freedom to
          use the best tools for their job. Combined with agility it's the key
-         for developing better products efficiently.
+         for developing great products and to do it more efficiently.
      </p>
     </div>
     <div class="tech">
