--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,19 +20,21 @@
      </p>
     </div>
     <div class="tech">
-      <h2>Code</h2>
+      <h2>DevOps stack</h2>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
       <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>I do professional coding in JavaScript and Java using
+         state of the art frameworks like Node, Spring Boot,
+         VueJS, Angular. Storing data in SQL and NoSQL databases,
+         Kafka
+       </p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
       <i class="devicon-git-plain"></i>
       <i class="devicon-gulp-plain colored"></i>
       <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p></p>
     </div>
 </div>
