--- a/_includes/about.html
+++ b/_includes/about.html
@@ -26,15 +26,17 @@
       <i class="devicon-nodejs-plain-wordmark"></i>
       <p>I do professional coding in JavaScript and Java using
          state of the art frameworks like Node, Spring Boot,
-         VueJS, Angular. Storing data in SQL and NoSQL databases,
-         Kafka
+         VueJS and Angular. Deep theoretical and practical knowledge in data management
+          and information retrieval allow me to choose the right tool stack for storing
+          and processing data - naturally based on project requirements.
+          Few examples are Oracle, MySQL, Redis, MongoDb, Elasticsearch, Kafka, JMS, MQTT.
        </p>
     </div>
     <div class="tech">
-      <h2>Tools</h2>
+      <h2>Interest</h2>
       <i class="devicon-git-plain"></i>
       <i class="devicon-gulp-plain colored"></i>
       <i class="devicon-atom-original-wordmark"></i>
-      <p></p>
+      <p>Algorithms</p>
     </div>
 </div>
