--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,42 +1,42 @@
- <div class="user-details">
-  <h1>About</h1>
-  <p> {{site.user_description}} </p>
+<div class="user-details">
+    <h1>About</h1>
+    <p> {{site.user_description}} </p>
 </div>
-  <div class="user">
+<div class="user">
     <div class="tech">
-      <h2>Software architecture and design</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>In a fast moving world software architectures need to
-         be evolutionary, allowing to apply changes easier and cheaper.
-         With that in mind I love to design systems uppon domain driven design
-         principles and to utilize micro service and micro frontend approaches.
-         Such architectures empower DevOps teams to develop
-         their sub systems autonomously, in polyglot environments and
-         with the technological freedom to
-         use the best tools for their job. Combined with agility it's the key
-         for developing great products and to do it more efficiently.
-     </p>
+        <h2>Software architecture and design</h2>
+        <p>In a fast moving world software architectures need to
+            be evolutionary, allowing to apply changes easier and cheaper.
+            With that in mind I love to design systems following the domain driven design
+            principles, to decompose functional and to utilize micro service and micro frontend approaches.
+            Giving DevOps teams such architectures empower them to develop
+            their sub systems autonomously, in polyglot environments and
+            within a technological freedom to
+            use the best tool for the job. Combined with agility it's my recipe
+            to help developing great products and to do it more efficiently.
+        </p>
     </div>
+</div>
+<div class="user">
     <div class="tech">
-      <h2>DevOps stack</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>I do professional coding in JavaScript and Java using
-         state of the art frameworks like Node, Spring Boot,
-         VueJS and Angular. Deep theoretical and practical knowledge in data management
-          and information retrieval allow me to choose the right tool stack for storing
-          and processing data - naturally based on project requirements.
-          Few examples are Oracle, MySQL, Redis, MongoDb, Elasticsearch, Kafka, JMS, MQTT.
-       </p>
+        <h2>DevOps stack</h2>
+        <p>I do professional coding in JavaScript and Java using
+            state of the art frameworks like Node, Spring Boot,
+            VueJS and Angular.</p><p>Deep theoretical and practical knowledge in data management
+            and information retrieval allow me to choose the right stack for storing and processing data out of existing
+            SQL or NoSQL databases, search and
+            messaging engines. My favourites so far are Oracle, MySQL, Redis, MongoDb, Elasticsearch, Kafka, JMS, MQTT.
+        </p>
+        <p>
+        </p>
     </div>
+</div>
+<div class="user">
     <div class="tech">
-      <h2>Interest</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Algorithms</p>
+        <h2>Interest</h2>
+        <i class="devicon-git-plain"></i>
+        <i class="devicon-gulp-plain colored"></i>
+        <i class="devicon-atom-original-wordmark"></i>
+        <p>Algorithms</p>
     </div>
 </div>
