--- a/_includes/about.html
+++ b/_includes/about.html
@@ -28,6 +28,9 @@
             messaging engines. My favourites so far are Oracle, MySQL, Redis, MongoDb, Elasticsearch, Kafka, JMS, MQTT.
         </p>
         <p>
+            I'm a fan of operating applications using Docker, managed by Kubernetes or AWS and monitored
+            by ELK stack and Prometheus. Immutable infrastructure and CI/CD pipelines with highly automated tests and
+            deployments are essential for me.
         </p>
     </div>
 </div>
