--- a/_includes/about.html
+++ b/_includes/about.html
@@ -36,10 +36,10 @@
 </div>
 <div class="user">
     <div class="tech">
-        <h2>Interest</h2>
-        <i class="devicon-git-plain"></i>
-        <i class="devicon-gulp-plain colored"></i>
-        <i class="devicon-atom-original-wordmark"></i>
-        <p>Algorithms</p>
+        <h2>Principles and further interests</h2>
+        <p>My actions in finding technical solutions are characterized by a systematic analysis of the problem and requirements,
+            the finding of possible alternatives and their assessment. I like to base decisions on figures, dates and facts.</p>
+        <p>My favorite clean code developer principles are KISS und the SOLID patterns. I love simple, elegant and performant solutions.</p>
+        <p>I'm excited about any kind of robotics, algorithms, AI and IoT.</p>
     </div>
 </div>
