LinkedIn and Xing links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,6 +32,8 @@ document.write("<a aria-label=\"Send email\" href='mailto:"+link+"'><i class=\"i
         <a aria-label="My Twitter" target="_blank" href="https://twitter.com/{{site.twitter_username}}"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
         <!-- <a aria-label="My Google Plus" target="_blank" href="#"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a> -->
         <a aria-label="My Github" target="_blank" href="https://github.com/{{site.github_username}}"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="My LinkedIn profile" target="_blank" href="https://www.linkedin.com/in/michael-blank-7b39b338/"><i class="icon fa fa-linkedin-in"></i></a>
+          <a aria-label="My Xing profile" target="_blank" href="https://www.xing.com/profile/Michael_Blank3/"><i class="icon fa fa-xing"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
