--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,8 +29,8 @@ document.write("<a aria-label=\"Send email\" href='mailto:"+link+"'><i class=\"i
 }
 //-->
 </script><noscript>Sorry, you need Javascript on to email me.</noscript>
-        <a title="My Twitter" target="_blank" href="https://twitter.com/{{site.twitter_username}}"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a title="My Github" target="_blank" href="https://github.com/{{site.github_username}}"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a title="My Twitter account" target="_blank" href="https://twitter.com/{{site.twitter_username}}"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
+        <a title="My Github account" target="_blank" href="https://github.com/{{site.github_username}}"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
         <a title="My LinkedIn profile" target="_blank" href="https://www.linkedin.com/in/michael-blank-7b39b338/"><i class="icon fa fa-linkedin"></i></a>
         <a title="My Xing profile" target="_blank" href="https://www.xing.com/profile/Michael_Blank3/"><i class="icon fa fa-xing"></i></a>
       </div>
